kubernetes/apps/showcase/hubble-traffic-stream/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-traffic-streamer
  namespace: showcase
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-traffic-streamer
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: kps-kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
              - matchName: telemetry.pragalva.me
    - toFQDNs:
        - matchName: telemetry.pragalva.me
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
